src/main/kotlin/com/example/exit/global/error/custom/GlobalCustomException.kt
package com.example.exit.global.error.custom

abstract class GlobalCustomException(
    val errorProperty: CustomErrorProperty
) : RuntimeException()